samples/_failures_safe/1761489833_7c1356_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4466a1c6.c: In function ‘main’:
./samples/SAFE/__tmp_4466a1c6.c:181:20: error: ‘mat’ undeclared (first use in this function); did you mean ‘mat2’?
  181 |     destroy_matrix(mat
      |                    ^~~
      |                    mat2
./samples/SAFE/__tmp_4466a1c6.c:181:20: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_4466a1c6.c:181:23: error: expected ‘)’ at end of input
  181 |     destroy_matrix(mat
      |                   ~   ^
      |                       )
./samples/SAFE/__tmp_4466a1c6.c:181:5: error: expected declaration or statement at end of input
  181 |     destroy_matrix(mat
      |     ^~~~~~~~~~~~~~
